Tab Collapse fix

--- a/assets/frontend/css/core-styles.css
+++ b/assets/frontend/css/core-styles.css
@@ -2039,7 +2039,7 @@ p.sub-title{
         font-size:60px;	
     }	
      .innerPage .nav-tabs > li > a{
-    	font-size:25px;
+    	font-size:24px;
     }
 }
 @media(max-width:920px){
